# nenuzhnix-base-files

./: CMakeLists.txt  LICENSE  README.md
etc/: hostname  hosts  inittab  issue  os-release  profile
