cmake_minimum_required(VERSION 3.0)

project(base-files
        VERSION 0.1
        LANGUAGES NONE)

FILE(GLOB SHADOW "${PROJECT_SOURCE_DIR}/shadow/*")
FILE(GLOB CONFIG "${PROJECT_SOURCE_DIR}/etc/*")
FILE(GLOB UTILS "${PROJECT_SOURCE_DIR}/bin/*")

install(DIRECTORY DESTINATION "/dev")
install(DIRECTORY DESTINATION "/include")
install(DIRECTORY DESTINATION "/lib")
install(DIRECTORY DESTINATION "/proc")
install(DIRECTORY DESTINATION "/root")
install(DIRECTORY DESTINATION "/share")
install(DIRECTORY DESTINATION "/sys")

install(FILES ${SHADOW}
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
        DESTINATION "/etc")

install(FILES ${CONFIG}
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
        DESTINATION "/etc")

install(FILES ${UTILS}
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        DESTINATION "/bin")
